--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,25 +21,22 @@
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="0" Grid.Row="0"/>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="0" Grid.Row="1"/>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="0" Grid.Row="2"/>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="0" Grid.Row="3"/>
-        
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="1" Grid.Row="0"/>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="1" Grid.Row="1"/>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="1" Grid.Row="2"/>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="1" Grid.Row="3"/>
-        
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="2" Grid.Row="0"/>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="2" Grid.Row="1"/>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="2" Grid.Row="2"/>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="2" Grid.Row="3"/>
-        
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="3" Grid.Row="0"/>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="3" Grid.Row="1"/>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="3" Grid.Row="2"/>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="3" Grid.Row="3"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="0" Grid.Row="0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="0" Grid.Row="1" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="0" Grid.Row="2" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="0" Grid.Row="3" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="1" Grid.Row="0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="1" Grid.Row="1" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="1" Grid.Row="2" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="1" Grid.Row="3" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="2" Grid.Row="0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="2" Grid.Row="1" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="2" Grid.Row="2" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="2" Grid.Row="3" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="3" Grid.Row="0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="3" Grid.Row="1" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="3" Grid.Row="2" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="?" VerticalAlignment="Center" FontSize="36" UseLayoutRounding="True" Grid.Column="3" Grid.Row="3" MouseDown="TextBlock_MouseDown"/>
 
 
 
